--- a/admin/pages/rsolicitudes.html
+++ b/admin/pages/rsolicitudes.html
@@ -220,11 +220,11 @@
                 <div class="col-lg-8">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Flujo reciente de estudiantes
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Flujo reciente de solicitudes
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <div id="morris-area-chart"></div>
+                            <div id="morris-area-chart-solicitudes"></div>
                         </div>
                         <!-- /.panel-body -->
                     </div>
@@ -236,11 +236,11 @@
                     <!-- /.panel -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Acumulado de visitas
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Acumulado de solicitudes
                         </div>
                         <div class="panel-body">
                             <div id="morris-donut-chart"></div>
-                            <a href="rflujo.html" id="btn_details" class="btn btn-default btn-block">Ver detalles</a>
+                            <a href="#" id="btn_details" class="btn btn-default btn-block">Descargar Reporte</a>
                         </div>
                         <!-- /.panel-body -->
                     </div>
@@ -281,7 +281,7 @@
     <script type="text/javascript">
         get_user("#fld-email");
         get_aLotData("#cant_solicitudes","#cant_reservas","#cant_flujo","#cant_observaciones");
-        get_chardata();
+        get_chardata_solicitudes();
         get_chardata_d();
     </script>
 
