falta ingresar la lista de salones en el campo de salones a reservar

--- a/reservas.html
+++ b/reservas.html
@@ -34,7 +34,7 @@
             <div class="form-group">
               <select class="form-control input-lg" name="tipoSol" id="tipoSol" tabindex="1">
                 <option value="0">¿Qué desea reservar?</option>
-                <option value="1">Salón de Informática</option>
+                <option value="1">Sala de C&oacute;mputo</option>
                 <option value="2">Salón de Clases</option>
               </select>
             </div>
@@ -76,7 +76,7 @@
               <select class="form-control input-lg" name="cargo" id="cargo" tabindex="1">
                 <option value="0">Cargo Actual</option>
                 <option value="Docente">Docente</option>
-                <option value="Estudiante">Estudiante</option>
+                <option id="c_e" value="Estudiante">Estudiante</option>
                 <option value="Funcionario">Funcionario</option>
               </select>
             </div>
@@ -110,7 +110,7 @@
 	                <option value="0">Sal&oacute;n</option>
 	                <option value="1014">1014 (Sala 1)</option>
 	                <option value="1015">1015 (Sala 2)</option>
-	                <option value="1016">1016 (Sala 3)</option>
+	                <option id="1011" value="1011">1011 (Sala 3)</option>
 	            </select>
               </div><br>
             </div>
