--- a/reservas.html
+++ b/reservas.html
@@ -24,7 +24,7 @@
         <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
         <form role="form" id="contact-form">
           <div class="row">
-            <div class="col-md-12"><h2>Reservas </br><small>Instituto de Educación y Pedagogía</small></h2></div>
+            <div class="col-md-12"><h2><small>Para reservar, favor colocar la informaci&oacute;n del funcionario o docente a cargo, no se aceptan solicitudes con información de estudiantes monitores</small></h2></div>
           </div>
           <hr class="colorgraph">
           <!-- INFO DEL USUARIO -->
