--- a/admin/pages/rsolicitudes.html
+++ b/admin/pages/rsolicitudes.html
@@ -120,7 +120,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header"><i class="fa fa-bar-chart-o fa-fw" style="color:"></i> Flujo de solicitudes - IEP</h1>
+                    <h1 class="page-header"><i class="fa fa-bar-chart-o fa-fw" style="color:"></i>Solicitudes</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -133,7 +133,7 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <div id="morris-area-chart-solicitudes"></div>
+                            <div id="morris-area-chart-solicitudes-diarias"></div>
                         </div>
                         <!-- /.panel-body -->
                     </div>
@@ -144,12 +144,11 @@
                 <div class="col-lg-4">
                     <!-- /.panel -->
                     <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Acumulado de solicitudes
+                        <div class="panel-heading" id="btn_details" >
+                            <i class="fa fa-bar-chart-o fa-fw"></i>
                         </div>
                         <div class="panel-body">
                             <div id="morris-donut-chart-solicitudes"></div>
-                            <a href="#" id="btn_details" class="btn btn-default btn-block">Descargar Reporte</a>
                         </div>
                         <!-- /.panel-body -->
                     </div>
@@ -157,6 +156,23 @@
                     
                 </div>
                 <!-- /.col-lg-4 -->
+            </div>
+            <!-- /.row -->
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Solicitudes Diarias
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div id="morris-area-chart-solicitudes"></div>
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->
+                </div>
+                <!-- /.col-lg-8 -->
             </div>
             <!-- /.row -->
         </div>
@@ -189,7 +205,8 @@
     <script src="../js/scriptdata.js"></script>
     <script type="text/javascript">
         get_user("#fld-email");
-        get_chardata_solicitudes();
+        get_chardata_solicitudes(1);
+        get_chardata_solicitudes(2);
         get_chardata_d_sol();
     </script>
 
