--- a/admin/pages/solicitudes.html
+++ b/admin/pages/solicitudes.html
@@ -23,6 +23,9 @@
     <!-- datatables Responsive CSS -->
     <link href="../bower_components/datatables-responsive/css/datatables.responsive.css" rel="stylesheet">
 
+    <!-- growl alert CSS -->
+    <link href="../bower_components/growl/css/animate.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
 
@@ -124,7 +127,7 @@
             </div>
             <!-- /.row -->
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-8">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <i class="fa fa-inbox fa-fw"></i>  Solicitudes de Servicios (Comunicaciones y Soporte)
@@ -135,13 +138,12 @@
                                 <table class="table table-striped table-bordered table-hover" id="datatables-example">
                                     <thead>
                                         <tr>
-                                            <th>Tipo</th>
-                                            <th>Fecha solicitud</th>
+                                            <th>Fecha</th>
+                                            <th>Completado</th>
                                             <th>Nombre</th>
                                             <th>Cargo</th>
                                             <th>Tel / ext</th>
-                                            <th>Email</th>
-                                            <th>Descripción</th>
+                                            <th>Opciones</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -154,7 +156,21 @@
                     </div>
                     <!-- /.panel -->
                 </div>
-                <!-- /.col-lg-12 -->
+                <!-- /.col-lg-8 -->
+                <div class="col-lg-4">
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <i class="fa fa-search fa-fw"></i>Detalle
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body" id="detalle-sol">
+
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->
+                </div>
+                <!-- /.col-lg-8 -->
             </div>
             <!-- /.row -->
         </div>
@@ -179,6 +195,12 @@
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
 
+    <!-- growl alerts -->
+    <script src="../bower_components/growl/bootstrap-growl.js"></script>
+
+    <!-- bootbox modal -->
+    <script src="../bower_components/bootbox/bootbox.min.js"></script>
+
     <!-- Custom Scripts -->
     <script src="../js/scriptdata.js"></script>
     
@@ -186,15 +208,10 @@
     <script>
     $(document).ready(function() {
         get_user("#fld-email");
-        //var dataSet = get_solicitudes();
-        //console.log("dataset en solicitudes.html: "+dataSet)
-        var oTable = $('#datatables-example').dataTable({"processing": true});
+        $(".panel-info").hide();
+
+        var oTable = $('#datatables-example').dataTable({"processing": true, "order": [[ 1, "asc" ]]});
         get_solicitudes(oTable);
-        /*$('#datatables-example').DataTable({
-            "processing": true,
-            "serverSide": true,
-            "ajax": '../php/get_solicitudes.php'
-        });*/
     });
     </script>
 
