--- a/reservas.html
+++ b/reservas.html
@@ -108,9 +108,18 @@
               <div class="col-xs-6 col-sm-6 col-md-6">
               	<select class="form-control input-lg" name="r_salon" id="r_salon" placeholder="Nro. Salón" tabindex="12">
 	                <option value="0">Sal&oacute;n</option>
-	                <option value="1014">1014 (Sala 1)</option>
-	                <option value="1015">1015 (Sala 2)</option>
-	                <option id="1011" value="1011">1011 (Sala 3)</option>
+	                <option id="1014" value="1014">1014 (Sala 1)</option>
+	                <option id="1015" value="1015">1015 (Sala 2)</option>
+                  <option id="1013" value="1013">1013 Salon Cultural</option>
+                  <option id="2025" value="2025">2025 </option>
+                  <option id="3021" value="3021">3021 Salon de Posgrados </option>
+                  <option id="3048" value="3048">3048 </option>
+                  <!-- 381 -->
+                  <option id="1011" value="1011">1011 (Sala 3)</option>
+                  <option id="1016" value="1016">1016 (55 Personas)</option>
+                  <option id="2014" value="2014">2014 (30 Personas)</option>
+                  <option id="2017" value="2017">2017 (30 Personas)</option>
+                  <option id="2023" value="2023">2023 (30 Personas)</option>
 	            </select>
               </div><br>
             </div>
