--- a/reservas.html
+++ b/reservas.html
@@ -181,6 +181,7 @@
     <script src="js/moment.js"></script>
     <script src="js/bootstrap-datetimepicker.js"></script>
     <script src="js/bootstrap-datepicker.js"></script>
+    <script type="text/javascript" src="js/locales/bootstrap-datepicker.es.js"></script>
     <script src="js/reservas.js"></script>
   </body>
 </html>
