--- a/admin/pages/index.html
+++ b/admin/pages/index.html
@@ -53,7 +53,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Panel de Control - IEP</a>
+                
+                <a class="navbar-brand" href="index.html"> <img src="../../img/univalle_2.jpg" width="15%"> <span>Panel de Control - IEP</span></a>
             </div>
             <!-- /.navbar-header -->
 
@@ -69,6 +70,7 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
+
                             <div class="input-group custom-search-form">
                                 <input type="text" class="form-control" placeholder="Buscar...">
                                 <span class="input-group-btn">
