Cambios en la interfaz y detalle de actividades por estudiante

--- a/admin/pages/index.html
+++ b/admin/pages/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -54,7 +53,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 
-                <a class="navbar-brand" href="index.html"> <img src="../../img/univalle_2.jpg" width="15%"> <span>Panel de Control - IEP</span></a>
+                <a class="navbar-brand" href="index.html"> <img src="../../img/univalle_2.jpg" width="8%" style="float:left;">&nbsp;<span style="float: left; margin-top: 4px; margin-left: 20px;">Panel de Control - IEP</span></a>
             </div>
             <!-- /.navbar-header -->
 
