--- a/admin/pages/fregistro.html
+++ b/admin/pages/fregistro.html
@@ -54,8 +54,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Panel de Control - IEP</a>
-            </div>
+                <a class="navbar-brand" href="index.html"> <img src="../../img/univalle_2.jpg" width="8%" style="float:left;">&nbsp;<span style="float: left; margin-top: 4px; margin-left: 20px;">Panel de Control - IEP</span></a>            </div>
             <!-- /.navbar-header -->
 
             <ul class="nav navbar-top-links navbar-right">
@@ -142,9 +141,9 @@
                                             <table class="table table-striped table-bordered table-hover" id="datatables-registrados">
                                                 <thead>
                                                     <tr>
-                                                        <th>Nombre</th>
                                                         <th>Código - Plan</th>
-                                                        <th>Fecha de Registro</th>
+                                                        <th>Nombre</th>
+                                                        <th>Detalles</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody></tbody>
@@ -201,6 +200,24 @@
 
     </div>
     <!-- /#wrapper -->
+
+    <!-- Bootstrap Modal -->
+    <div class="modal fade" id="modal_detalleRegistrados-lg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel-lg" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="exampleModalLabel-lg">Detalle de Actividades</h4>
+          </div>
+          <div class="modal-body">
+            
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- jQuery -->
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
