--- a/admin/pages/rsolicitudes.html
+++ b/admin/pages/rsolicitudes.html
@@ -53,8 +53,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Panel de Control - IEP</a>
-            </div>
+                <a class="navbar-brand" href="index.html"> <img src="../../img/univalle_2.jpg" width="8%" style="float:left;">&nbsp;<span style="float: left; margin-top: 4px; margin-left: 20px;">Panel de Control - IEP</span></a>            </div>
             <!-- /.navbar-header -->
 
             <ul class="nav navbar-top-links navbar-right">
