--- a/reservas.html
+++ b/reservas.html
@@ -162,7 +162,7 @@
             <h4 class="modal-title" id="myModalLabel">Reservas Programadas</h4>
           </div>
           <div class="modal-body">
-            <p><iframe src="https://www.google.com/calendar/embed?mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=correounivalle.edu.co_lt387lfprb0t0k5ni016arcfjg%40group.calendar.google.com&amp;color=%23711616&amp;ctz=America%2FBogota" style=" border-width:0 " width="570" height="600" frameborder="0" scrolling="no"></iframe></p>
+            <p><iframe src="https://www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=correounivalle.edu.co_ofsfbf0277iufml6qtae0e973k%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FBogota" style=" border-width:0 " width="100%" height="600" frameborder="0" scrolling="no"></iframe></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-dismiss="modal">Listo</button>
