--- a/admin/pages/rflujo.html
+++ b/admin/pages/rflujo.html
@@ -128,13 +128,13 @@
                 <div role="tabpanel">
                   <!-- Nav tabs -->
                   <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" class="active"><a href="#s1" aria-controls="home" role="tab" data-toggle="tab">Sala 1</a></li>
-                    <li role="presentation"><a href="#s2" aria-controls="profile" role="tab" data-toggle="tab">Sala 2</a></li>
-                    <li role="presentation"><a href="#s3" aria-controls="messages" role="tab" data-toggle="tab">Sala 3</a></li>
+                    <li role="presentation" class="active"><a id="ps1" href="#s1" aria-controls="home" role="tab" data-toggle="tab">Sala 1</a></li>
+                    <li role="presentation"><a href="#s2" id="ps2" aria-controls="profile" role="tab" data-toggle="tab">Sala 2</a></li>
+                    <li role="presentation"><a href="#s3" id="ps3" aria-controls="messages" role="tab" data-toggle="tab">Sala 3</a></li>
                   </ul>
                   <!-- Tab panes -->
                   <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane active" id="s1">a</div>
+                    <div role="tabpanel" class="tab-pane active" id="s1"><br></div>
                     <div role="tabpanel" class="tab-pane" id="s2">b</div>
                     <div role="tabpanel" class="tab-pane" id="s3">c</div>
                   </div>
@@ -171,7 +171,7 @@
     <script src="../js/scriptFlujo.js"></script>
     <script type="text/javascript">
         get_user("#fld-email");
-        get_flujoData();
+        get_flujoFranjas(1);
     </script>
 
     
