--- a/admin/pages/rflujo.html
+++ b/admin/pages/rflujo.html
@@ -134,9 +134,9 @@
                   </ul>
                   <!-- Tab panes -->
                   <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane active" id="s1"><br></div>
-                    <div role="tabpanel" class="tab-pane" id="s2">b</div>
-                    <div role="tabpanel" class="tab-pane" id="s3">c</div>
+                    <div role="tabpanel" class="tab-pane active" id="s1"><img src="../img/contruccion.png"></div>
+                    <div role="tabpanel" class="tab-pane" id="s2"><img src="../img/contruccion.png"></div>
+                    <div role="tabpanel" class="tab-pane" id="s3"><img src="../img/contruccion.png"></div>
                   </div>
                 </div>
             </div>
@@ -171,7 +171,7 @@
     <script src="../js/scriptFlujo.js"></script>
     <script type="text/javascript">
         get_user("#fld-email");
-        get_flujoFranjas(1);
+        //get_flujoFranjas(1);
     </script>
 
     
