cambios en planes

--- a/admin/pages/fregistro.html
+++ b/admin/pages/fregistro.html
@@ -169,7 +169,25 @@
                                             </div>
                                             <div class="form-group input-group">
                                                 <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                                                <input type="text" class="form-control" id="plan" placeholder="Plan">
+                                                <select id="plan" class="form-control">
+                                                	<option value="3410">	Profesional en Ciencias del Deporte	</option>
+													<option value="3454">	Licenciatura en Matemática Física - Presencial	</option>
+													<option value="3456">	Licenciatura en Biología Química - Presencial	</option>
+													<option value="3458">	Licenciatura en Educación Física y Salud	</option>
+													<option value="3462">	Licenciatura en Educación Primaria	</option>
+													<option value="3464">	Programa Académico en Recreación	</option>
+													<option value="3465">	Profesional en Estudios Políticos y Resolución de conflictos	</option>
+													<option value="3466">	Programa Académico en Recreación - Nocturno	</option>
+													<option value="3467">	Licenciatura en Educación Básica Enf en Ciencias Naturales y Educación Ambiental - Presencial	</option>
+													<option value="3468">	Licenciatura en Educación Básica Enf en Ciencias Naturales y Educación Ambiental – Semi-presencial	</option>
+													<option value="3469">	Licenciatura en Educación Básica Enf en Educación Matemática - Presencial	</option>
+													<option value="3470">	Licenciatura en Educación Básica Enf en Educación Matemática – Semi-presencial	</option>
+													<option value="3484">	Licenciatura en Educación Física y Deporte - Presencial	</option>
+													<option value="3485">	Licenciatura en Educación Física y Deporte – Semi-presencial	</option>
+													<option value="3486">	Licenciatura en Educación Popular- Semi-presencial nocturno	</option>
+													<option value="3487">	Licenciatura en Matemática Física - Presencial	</option>
+													<option value="3488">	Licenciatura en Matemática Física - Semi-presencial	</option>
+                                                </select>
                                             </div>
                                             <div class="form-group input-group">
                                                 <span class="input-group-addon"><i class="fa fa-user"></i></span>
