Agregado (otro plan) a formulario de registro de estudiantes

--- a/admin/pages/fregistro.html
+++ b/admin/pages/fregistro.html
@@ -187,7 +187,7 @@
 													<option value="3486">	Licenciatura en Educación Popular- Semi-presencial nocturno	</option>
 													<option value="3487">	Licenciatura en Matemática Física - Presencial	</option>
 													<option value="3488">	Licenciatura en Matemática Física - Semi-presencial	</option>
-													<option value="3261">	Geografia	</option>
+													<option value="9999">	Otro Plan	</option>
                                                 </select>
                                             </div>
                                             <div class="form-group input-group">
