--- a/admin/pages/fregistro.html
+++ b/admin/pages/fregistro.html
@@ -257,6 +257,9 @@
     <!-- growl alerts -->
     <script src="../bower_components/growl/bootstrap-growl.js"></script>
 
+    <!-- bootbox modal -->
+    <script src="../bower_components/bootbox/bootbox.min.js"></script>
+
     <!-- Custom Scripts -->
     <script src="../js/scriptdata.js"></script>
     
