update cambios postmortem trello

--- a/admin/pages/login.html
+++ b/admin/pages/login.html
@@ -45,8 +45,9 @@
                     <div class="panel-body">
                         <form role="form" id="contact-form">
                             <fieldset>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="Correo" id="email" name="email" type="email" autofocus>
+                                <div class="form-group input-group">
+                                    <input class="form-control" placeholder="Correo" id="email" name="email" type="text" autofocus>
+                                    <span class="input-group-addon">@correounivalle.edu.co</span>
                                 </div>
                                 <div class="form-group">
                                     <input class="form-control" placeholder="Contraseña" id="password" name="password" type="password" value="">
