--- a/admin/pages/usuarios.html
+++ b/admin/pages/usuarios.html
@@ -159,10 +159,10 @@
                             <div class="col-lg-4">
                                 <div class="panel panel-green">
                                     <div class="panel-heading">
-                                        Registrar Observación
+                                        Registrar Usuarios
                                     </div>
                                     <div class="panel-body">
-                                        <form role="form" if="form-nuevoest">
+                                        <form role="form" id="form-nuevoest">
                                             <div class="form-group">
                                                 <select class="form-control" id="rol">
                                                     <option>Tipo de Usuario</option>
