--- a/admin/pages/rflujo.html
+++ b/admin/pages/rflujo.html
@@ -127,24 +127,63 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
-            
             <div class="row">
                 <div role="tabpanel">
                   <!-- Nav tabs -->
                   <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" class="active"><a id="ps1" href="#s1" aria-controls="home" role="tab" data-toggle="tab">Sala 1</a></li>
-                    <li role="presentation"><a href="#s2" id="ps2" aria-controls="home" role="tab" data-toggle="tab">Sala 2</a></li>
-                    <li role="presentation"><a href="#s3" id="ps3" aria-controls="home" role="tab" data-toggle="tab">Sala 3</a></li>
+                    <li role="presentation" class="active"><a id="ps1" href="#cs1" aria-controls="home" role="tab" data-toggle="tab">Sala 1</a></li>
+                    <li role="presentation"><a href="#cs2" id="ps2" aria-controls="home" role="tab" data-toggle="tab">Sala 2</a></li>
+                    <li role="presentation"><a href="#cs3" id="ps3" aria-controls="home" role="tab" data-toggle="tab">Sala 3</a></li>
                   </ul>
                   <!-- Tab panes -->
                   <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane active" id="s1"><br></div>
-                    <div role="tabpanel" class="tab-pane" id="s2"><br></div>
-                    <div role="tabpanel" class="tab-pane" id="s3"><br></div>
+                    <div role="tabpanel" class="tab-pane active" id="cs1"><br>
+                        <div class="col-lg-12">
+                            <ul class="nav navbar-top-links navbar-right">
+                                <li><a id="btn-export" onClick="descargarReporte(1)" title="Exportar a PDF"><i class="fa fa-file-pdf-o fa-fw"></i>Descargar PDF</a></li>
+                                <!-- /.dropdown -->
+                            </ul>
+                        </div>
+                        <div id="report_s1">
+                            <h1 class="page-header"><small>Flujo de Estudiantes por Franja Horaria</small></h1>
+                            <div id="s1"></div>
+                            <h1 class="page-header"><small>Flujo de Estudiantes por Mes</small></h1>
+                            <div id="s1_mes"></div>
+                        </div>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="cs2"><br>
+                        <div class="col-lg-12">
+                            <ul class="nav navbar-top-links navbar-right">
+                                <li><a id="btn-export" onClick="descargarReporte(2)" title="Exportar a PDF"><i class="fa fa-file-pdf-o fa-fw"></i>Descargar PDF</a></li>
+                                <!-- /.dropdown -->
+                            </ul>
+                        </div>
+                        <div id="report_s2">
+                            <h1 class="page-header"><small>Flujo de Estudiantes por Franja Horaria</small></h1>
+                            <div id="s2"></div>
+                            <h1 class="page-header"><small>Flujo de Estudiantes por Mes</small></h1>
+                            <div id="s2_mes"></div>
+                        </div>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="cs3"><br>
+                        <div class="col-lg-12">
+                            <ul class="nav navbar-top-links navbar-right">
+                                <li><a id="btn-export" onClick="descargarReporte(3)" title="Exportar a PDF"><i class="fa fa-file-pdf-o fa-fw"></i>Descargar PDF</a></li>
+                                <!-- /.dropdown -->
+                            </ul>
+                        </div>
+                        <div id="report_s3">
+                            <h1 class="page-header"><small>Flujo de Estudiantes por Franja Horaria</small></h1>
+                            <div id="s3"></div>
+                            <h1 class="page-header"><small>Flujo de Estudiantes por Mes</small></h1>
+                            <div id="s3_mes"></div>
+                        </div>
+                    </div>
                   </div>
                 </div>
             </div>
         </div>
+        <div id="editor"></div>
         <!-- /#page-wrapper -->
 
     </div>
@@ -171,12 +210,14 @@
 
 
     <!-- Custom Scripts -->
+    <script src="../js/jsPdf.js"></script>
     <script src="../js/scriptdata.js"></script>
     <script src="../js/scriptFlujo.js"></script>
     <script type="text/javascript">
      $(document).ready(function(){
         get_user("#fld-email");
         get_flujoFranjas(1);
+
      });
     </script>    
 
