--- a/admin/pages/usuarios.html
+++ b/admin/pages/usuarios.html
@@ -279,11 +279,9 @@
     <script>
         get_user("#fld-email");
         $(document).ready(function() {
-        var oTable = $('#datatables-observaciones').dataTable({responsive: true});
+         oTable = $('#datatables-observaciones').dataTable({responsive: true});
         get_usuarios(oTable);
-        setInterval( function () {
-            get_usuarios(oTable);
-        }, 5000 );
+
     });
     </script>
 
